<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.24">
  <GVL Name="GVL_ScalarTests" Id="{527d55c2-5796-4511-90a0-13a070d237ad}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	nEndOfNodeIDVars	: UINT := 8;
	nMaxReadData		: UDINT := 255;
	sOpcUA_URL			: STRING := 'opc.tcp://localhost:4841';
	sNodeIDNamespace	: STRING := 'PLC1';
END_VAR
VAR_GLOBAL
	NodeID_Identifiers		: ARRAY[0..nEndOfNodeIDVars] OF STRING := ['GVL_static.stat_BOOL1x', 'GVL_static.stat_BSTR_0', 'GVL_static.stat_I1x', 'GVL_static.stat_I2x', 'GVL_static.stat_I4x', 'GVL_static.stat_R8x', 'GVL_static.stat_UI1x', 'GVL_static.stat_UI2x', 'GVL_static.stat_UI4x'];
	NodeID_Sizes			: ARRAY[0..nEndOfNodeIDVars] OF UDINT := [1, 255, 1, 2, 4, 8, 1, 2, 4];
	NodeID_WriteCommands	: ARRAY[0..nEndOfNodeIDVars] OF U_ScalarsInOne := [(bBool := TRUE), (sString := 'WriteTest'), (bByte := 123), (nInt := 124), (nUdint := 125), (nLReal := 1.23456), (bByte := 111), (nInt := 112), (nUdint := 113)];
	NodeID_ReadResults		: ARRAY[0..nEndOfNodeIDVars] OF U_ScalarsInOne;
	NodeID_ReadWrittenResults: ARRAY[0..nEndOfNodeIDVars] OF U_ScalarsInOne;
	NodeID_CheckReadWrite	: ARRAY[0..nEndOfNodeIDVars] OF BOOL;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>